# A-Maze-ing

./: .gitignore  Makefile  README.md  TODO.md  a_maze_ing.py  amazing.md  config.txt  config_parser.py  display.py  display_v2.py  output_maze.txt  path_finder.py  pyproject.toml
mazegen/: GUIDE.Md  __init__.py  config_parser.py  exporter.py  generator.py  pathfinder.py
