[project]
name = "mazegen"
version = "1.0.0"
description = "Maze generator library"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mazegen"]